tests/ui/async-await/in-trait/fn-not-async-err.stderr
error: method `foo` should be async because the method from the trait is async
  --> $DIR/fn-not-async-err.rs:10:5
   |
LL |     async fn foo(&self) -> i32;
   |     --------------------------- required because the trait method is async
...
LL |     fn foo(&self) -> i32 {
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

